# file-manager

./: package-lock.json  package.json
src-tauri/: 2  Cargo.toml  db.sqlite  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entity/: Cargo.toml  lib.rs  mod.rs  prelude.rs
src-tauri/entity/src/: dir_entries.rs  lib.rs  mod.rs  prelude.rs  quickpath.rs  tags.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20250223_210101_create_file_type.rs  m20250223_224256_create_tags_and_quickpaths.rs  m20250223_230300_create_quickpaths.rs  m20250223_230720_create_quick.rs  m20250223_231011_restoration_of_data.rs
src-tauri/src/: commands.rs  lib.rs  main.rs  quickpath_commands.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: app-sidebar.tsx  create-quick-path.tsx  explorer-tab.tsx  file-item.tsx  folder-item.tsx  side-bar.tsx
src/lib/: types.ts  utils.ts
