[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "1.1.5", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = "1.1.5"

